--- a/src/main/resources/io/jenkins/plugins/sample/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/sample/Messages.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Please set a name
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=Isn't the name too short?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=Are you actually French?
+NTFYNotifyBuilder.DescriptorImpl.errors.missingName=Please set a name
+NTFYNotifyBuilder.DescriptorImpl.warnings.tooShort=Isn't the name too short?
+NTFYNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Are you actually French?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Say hello world
+NTFYNotifyBuilder.DescriptorImpl.DisplayName=Send a message via NTFY
