--- a/src/main/resources/io/jenkins/plugins/sample/Messages_es.properties
+++ b/src/main/resources/io/jenkins/plugins/sample/Messages_es.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Proporciona un nombre
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=\u00BFEl nombre no est\u00C1 demasiado corto?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=\u00BFRealmente eres franc\u00E9s?
+NTFYNotifyBuilder.DescriptorImpl.errors.missingName=Proporciona un nombre
+NTFYNotifyBuilder.DescriptorImpl.warnings.tooShort=\u00BFEl nombre no est\u00C1 demasiado corto?
+NTFYNotifyBuilder.DescriptorImpl.warnings.reallyFrench=\u00BFRealmente eres franc\u00E9s?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Di hola mundo
+NTFYNotifyBuilder.DescriptorImpl.DisplayName=Di hola mundo
