--- a/src/main/resources/io/jenkins/plugins/sample/Messages_pt_BR.properties
+++ b/src/main/resources/io/jenkins/plugins/sample/Messages_pt_BR.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Insira um nome
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=Este nome n\u00E3o \u00E9 muito curto?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=Voc\u00EA \u00E9 realmente franc\u00EAs?
+NTFYNotifyBuilder.DescriptorImpl.errors.missingName=Insira um nome
+NTFYNotifyBuilder.DescriptorImpl.warnings.tooShort=Este nome n\u00E3o \u00E9 muito curto?
+NTFYNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Voc\u00EA \u00E9 realmente franc\u00EAs?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Diz ol\u00E1 mundo
+NTFYNotifyBuilder.DescriptorImpl.DisplayName=Diz ol\u00E1 mundo
