--- a/src/main/resources/io/jenkins/plugins/sample/Messages_sv.properties
+++ b/src/main/resources/io/jenkins/plugins/sample/Messages_sv.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Ange ett namn
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=\u00C4r inte namnet lite f\u00F6r kort?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=\u00C4r du egentligen Fransk?
+NTFYNotifyBuilder.DescriptorImpl.errors.missingName=Ange ett namn
+NTFYNotifyBuilder.DescriptorImpl.warnings.tooShort=\u00C4r inte namnet lite f\u00F6r kort?
+NTFYNotifyBuilder.DescriptorImpl.warnings.reallyFrench=\u00C4r du egentligen Fransk?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=S\u00E4g Hej V\u00E4rlden
+NTFYNotifyBuilder.DescriptorImpl.DisplayName=S\u00E4g Hej V\u00E4rlden
